# agent

./: .env.example  .gitignore  .google-cookie  AGENTS.md  CMakeLists.txt  Jarvis.spec  README.md  Run_Jarvis.bat  TOOLS.md  build_exe.py  build_fast.py  check_devices.py  install_optional.py  rebuild_exe.py  requirements.bat  requirements.sh  requirements.txt  run_jarvis.py  setup.py  test_ai.py  test_all_mics.py  test_ar_stt.py  test_device6.py  test_devices.py  test_enhanced.py  test_langs.py  test_long.py  test_mic.py  test_mic14.py  test_mic2.py  test_model.py  test_model2.py  test_multi.py  test_network.py  test_optional.py  test_rec_methods.py  test_screen_watch.py  test_vision_prompt.py  test_voice_flow.py  test_wake_words.py  (+1 more)
.github/workflows/: ci.yml
.opencode/tool/: jarvis_calculator.toml  jarvis_clipboard.toml  jarvis_define.toml  jarvis_file_read.toml  jarvis_file_write.toml  jarvis_notes.toml  jarvis_run_command.toml  jarvis_system_info.toml  jarvis_time.toml  jarvis_todo.toml  jarvis_weather.toml  jarvis_web_search.toml
docs/: architecture.md
jarvis_app/: __init__.py  ai.py  core.py  gui.py  main.py  memory.py  security.py  todo_overlay.py  tools.py  voice.py
plugins/example_plugin/: manifest.json  plugin.py
resources/: resources.qrc
resources/styles/: main.qss
scripts/: build.bat  download_models.bat  install_deps.bat  package.bat
src/jarvis/: CMakeLists.txt  main.cpp
src/jarvis/ai/: AIEngine.cpp  AIEngine.h  OpenRouterClient.cpp  OpenRouterClient.h
src/jarvis/core/: AgentOrchestrator.cpp  AgentOrchestrator.h  Config.cpp  Config.h  ReActLoop.cpp  ReActLoop.h  ToolRegistry.cpp  ToolRegistry.h
src/jarvis/memory/: MemoryStore.cpp  MemoryStore.h
src/jarvis/plugins/: PluginLoader.cpp  PluginLoader.h
src/jarvis/security/: CredentialManager.cpp  CredentialManager.h  Governance.cpp  Governance.h
src/jarvis/tools/: BaseTool.h  CalculatorTool.cpp  CalculatorTool.h  FileIOTool.cpp  FileIOTool.h  SystemControlTool.cpp  SystemControlTool.h  WebSearchTool.cpp  WebSearchTool.h
src/jarvis/ui/: ChatPanel.cpp  ChatPanel.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  TrayManager.cpp  TrayManager.h
src/jarvis/voice/: VoicePipeline.cpp  VoicePipeline.h
tests/CppTests/: CMakeLists.txt  test_agent.cpp  test_memory.cpp  test_tools.cpp
(+11 files in other folders)
